# promql-parser

./: .gitignore  .licenserc.yaml  Cargo.toml  LICENSE  README.md  build.rs  codecov.yml  licenserc.toml  rust-toolchain.toml
.github/workflow/: coverage.yml
.github/workflows/: ci.yml  coverage.yml  develop.yml  function-comparison.yml  license.yml  pr-title-checker.yml  release.yml  semantic-pull-request.yml
examples/: parse.rs  parser.rs
scripts/: compare_functions.py
src/: lib.rs
src/label/: label.rs  matcher.rs  mod.rs
src/parser/: ast.rs  function.rs  item.rs  lex.rs  matcher.rs  mod.rs  parse.rs  parser.rs  production.rs  promql.y  token.rs  value.rs
src/util/: duration.rs  float.rs  mod.rs  number.rs  string.rs  visitor.rs
tests/: ser.rs
