[package]
name = "promql-parser"
readme = "README.md"
description = "Parse PromQL query into AST"
repository = "https://github.com/GreptimeTeam/promql-parser"
version = "0.1.1"
edition = "2021"
authors = ["The GreptimeDB Project Developers"]
keywords = ["prometheus", "promql", "parser"]
license = "Apache-2.0"
categories = ["parser-implementations"]

[dependencies]
cfgrammar = "0.12"
lazy_static = "1.4.0"
lrlex = "0.12.0"
lrpar = "0.12.0"
regex = "1"

[build-dependencies]
cfgrammar = "0.12"
lrlex = "0.12.0"
lrpar = "0.12.0"
